# NewBot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/db/: engine.py  models.py  seed.py
app/handlers/: chat.py  commands.py  start.py
app/keyboards/: inline.py  reply.py
app/middlewares/: db_session.py
app/services/: llm.py  memory.py  user.py
app/states/: user.py
app/utils/: text.py
deploy/: avatar-bot.service  deploy.sh
docs/: architecture.md  deploy.md  handlers.md  memory-system.md  services.md  streaming.md
tests/: conftest.py  test_models.py  test_services.py
